# mcp-bot-builder-telegram

./: .gitignore  README.md  config.py  env.example  main.py  pyproject.toml  requirements.txt
handlers/: create_bot.py  help.py  list_bots.py  start.py  start_bot.py  status.py  stop_bot.py
services/: analyzer.py  deployment.py  file_manager.py  generator.py  parser.py  registry.py
templates/: env.example.j2
templates/docker/: Dockerfile.nodejs.j2  Dockerfile.python.j2
templates/nodejs/: index.js.j2  package.json.j2
templates/nodejs/handlers/: add.js.j2  delete.js.j2  export.js.j2  help.js.j2  list.js.j2  reminder.js.j2  search.js.j2  start.js.j2  track.js.j2  update.js.j2
templates/python/: main.py.j2  requirements.txt.j2
templates/python/handlers/: __init__.py.j2  add.py.j2  delete.py.j2  export.py.j2  help.py.j2  list.py.j2  reminder.py.j2  search.py.j2  start.py.j2  track.py.j2  update.py.j2
templates/python/services/: __init__.py.j2  api_client.py.j2  database.py.j2  exporter.py.j2  payment.py.j2  scheduler.py.j2
utils/: formatters.py
